# MyAgentWatch-cli

./: CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  USAGE.zh-CN.md  config.json  myaw.cmd  pyproject.toml
archive/legacy-heartbeat-2026-06-22/: MyAgentWatch Codex Heartbeat.cmd.disabled  start-codex-heartbeat.ps1
myagentwatch_cli/: __init__.py  cli.py  client.py  daemon.py  doctor.py  heartbeat.py  local_inbox.py  monitor.py  queue.py
scripts/: install_daemon_autostart.ps1  start_daemon_hidden.ps1  uninstall_daemon_autostart.ps1  verify_p0c.ps1
